# hb_scraper

./: .editorconfig  .env.backup  .env.example  .env.test_noninteractive  .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SERVER_QUICKSTART.md  TROUBLESHOOTING.md  batch_process_images.py  config.py  demo_800x400.py  diagnose_server.py  docker-compose.yml  extract_product.py  image_processor.py  install_chromedriver.sh  main.py  process_csv_images.py  pyproject.toml  test_chrome_robust.py  test_config.py  test_detail.py  test_headless.py  test_headless_local.py  test_local_800x400.py  test_network.py  test_noninteractive_config.py  test_scraper_simple.py  test_upload.py  translate.py
data/input/: HD健康管理（内） 2a2892ef138a80baae6ae43203a2b356_all.csv
data/output/: failed_products.json
docs/: BATCH_WRITE.md  CHANGELOG_PARALLEL.md  IMAGEBED_SETUP.md  PARALLEL_SCRAPING.md  QUICK_START_PARALLEL.md  RETRY_FAILED.md  SERVER_DEPLOYMENT.md  UPDATE_SUMMARY.md  WEBDRIVER_ARCHITECTURE.md  neovim配置说明.md  todo_list.md  使用说明.md  多页爬取功能清单.md  多页爬取开发总结.md  多页爬取说明.md  日志系统开发总结.md  日志系统快速参考.md  日志系统说明.md  翻译工具说明.md  配置说明.md  配置适配总结.md  非交互式模式说明.md
scripts/: batch_process_images.py  check_imagebed.py  find_optimal_threads.py  process_csv_images.py  retry_failed.py  scrape_multi_pages.py  view_logs.py
tests/: demo_strategy.py  test_image_strategy.py  test_logging.py  test_multi_page.py  test_parallel_scraper.py
utils/: logger.py  multi_page_scraper.py  parallel_scraper.py  scraper_with_logging.py  translate.py  webdriver_helper.py
(+2 files in other folders)
